app/build/intermediates/cxx/Debug/2f673b4w/logs/armeabi-v7a/build_stdout_monos_native.txt
ninja: Entering directory `E:\Build Apps\Monos\app\.cxx\Debug\2f673b4w\armeabi-v7a'
[1/3] Building CXX object CMakeFiles/monos_native.dir/graphics_renderer.cpp.o
[2/3] Building CXX object CMakeFiles/monos_native.dir/proot_emulation.cpp.o
FAILED: CMakeFiles/monos_native.dir/proot_emulation.cpp.o 
C:\Users\Administrator\AppData\Local\Android\Sdk\ndk\26.1.10909125\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=armv7-none-linux-androideabi26 --sysroot=C:/Users/Administrator/AppData/Local/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/windows-x86_64/sysroot -Dmonos_native_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/monos_native.dir/proot_emulation.cpp.o -MF CMakeFiles\monos_native.dir\proot_emulation.cpp.o.d -o CMakeFiles/monos_native.dir/proot_emulation.cpp.o -c "E:/Build Apps/Monos/app/src/main/cpp/proot_emulation.cpp"
E:/Build Apps/Monos/app/src/main/cpp/proot_emulation.cpp:129:37: error: variable has incomplete type 'struct user_regs_struct'
            struct user_regs_struct regs;
                                    ^
E:/Build Apps/Monos/app/src/main/cpp/proot_emulation.cpp:129:20: note: forward declaration of 'user_regs_struct'
            struct user_regs_struct regs;
                   ^
1 error generated.
ninja: build stopped: subcommand failed.
